--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,12 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //공식문서에서 찾아서 그레들 추가하기
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    //gson 사용을 위한 컨버터
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 
 }
