--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.second_semina_alone">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Second_Semina_Alone">
-        <activity android:name=".MainActivity"></activity>
+        android:theme="@style/Theme.Second_Semina_Alone"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".home"></activity>
+        <activity android:name=".HomeActivity" />
         <activity android:name=".UserInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
